# node-seeta-legacy

./: .editorconfig  .gitignore  .npmignore  .travis.yml  .travis.yml.sh  CMakeLists.txt  LICENSE  README.md  README_zh-CN.md  binding.gyp  index.js  package.json  postinstall.js
.github/ISSUE_TEMPLATE/: bug_report.md
benchmark/: README.md  download_data.sh  recognize.js  seeta.benchmark.js  test.js
docs/: CHANGELOG.md
examples/: face-detection-and-alignment.js  face-recognition.js  with-callback.js
lib/: seeta.js
src/: face-detector.cpp  face-detector_v8.h  face-recognizer.cpp  face-recognizer_v8.h  face_align.cc  face_align.h  face_detect.cc  face_detect.h  facedetector.cc  facedetector_v8.h  facerecognizer.cc  facerecognizer_v8.h  image.cc  image_v8.h  point-detector.cpp  point-detector_v8.h  pointdetector.cc  pointdetector_v8.h  seeta.cc  seeta.cpp  seeta_v8.h
test/: addon.test.js  detect.test.js  seeta.test.js
test/features/: seeta.test.js
utils/: configure.js  find-opencv.js
